fixed mobile layout breaking and another minor bugs

--- a/public/assets/css/modal.css
+++ b/public/assets/css/modal.css
@@ -153,7 +153,7 @@ body {
 #btn-send-email {
     margin: 0 auto;
     display: block;
-    width: 10%;
+    width: 15%;
 }
 
 .modal-content-description {
